Добавлена логика в Activity для экрана Info. Добавлены зависимости в ViewModelModule. В верстку добавлен ProgressBar и текстовое поле для вывода ошибок. Добавлен класс App. Нужно откорректировать видимость отображения состояний

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">BIN_info</string>
     <string name="enter_request_hint">Введите номер карты</string>
     <string name="info_title">Информация по номеру карты</string>
+    <string name="no_internet">Нет интернета</string>
+    <string name="server_error">Ошибка сервера</string>
+    <string name="limit_error">Превышен лимит запросов</string>
+    <string name="nothing_found">Ничего не найдено</string>
 </resources>
