Чтобы исключить дублирование верстки карточки добавила <include />. Создала состояния для экрана истории запросов - HistoryState. Добавила HistoryViewModel и HistoryFragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,7 @@
     <string name="cards_in_history">Посмотреть сохраненные карты </string>
     <string name="no_maps_app_found">Приложения с картами не найдены</string>
     <string name="invalid_coordinates">Некоорректные координаты</string>
+    <string name="list_is_empty">История запросов пустая</string>
+    <string name="no_info">Не удалось получить\nсписок карт</string>
 
 </resources>
